# Impinj_R700

./: .env  .gitignore  CMakeLists.txt  Dockerfile.amd64  README.md  deployment.template.json  module.json
container/: CMakeLists.txt
scripts/: build.sh  prep.sh  run.sh
src/: impinj_reader_r700.h  main.c
src/curl_wrapper/: curl_wrapper.c  curl_wrapper.h
src/helpers/: pnp_command.h  pnp_property.c  pnp_property.h  pnp_telemetry.c  pnp_telemetry.h  pnp_utils.c  pnp_utils.h  restapi.c  restapi.h
src/iothub/: deviceMethod.c  deviceMethod.h  deviceTwin.c  deviceTwin.h  dps.c  dps.h  iothub_op.c  iothub_op.h
